2009-12-01  Xiyuan Xia  <xiyuan@chromium.org>

Reviewed by Darin Fisher.

        Only fire start/stop events when main frame is not loading.

        https://bugs.webkit.org/show_bug.cgi?id=31838

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchDidChangeLocationWithinPage):

Canonical link: https://commits.webkit.org/42975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51548 268f45cc-cd09-0410-ab3c-d52691b4dbfc